# remote-id

./: Cargo.toml  README.md
examples/: receive.rs  transmit.rs
src/codec/: decode.rs  encode.rs  mod.rs
src/data/: basic_id.rs  location.rs  mod.rs  operator_id.rs  system.rs
